--- a/src/app/admin/categories-setting/update-categories/update-categories.component.html
+++ b/src/app/admin/categories-setting/update-categories/update-categories.component.html
@@ -38,11 +38,11 @@
                 </div>
             </div>
 
-            
+
         </div>
         <div class="">
             <button mat-raised-button color="primary" type="submit" class="mr-20">{{ (this.form.get('id').value)?'Update':'Add'}}</button>
-            <button mat-raised-button color="warn" type="button" routerLink="/admin/settings/categories/list">Cancel</button>
+            <button mat-raised-button color="warn" type="button" routerLink="/admin/categories/list">Cancel</button>
         </div>
     </form>
 </div>
