--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
-<div class="row buttons_row">
+<div class="container-fluid pt-20">
+  <div class="row buttons_row">
     <div class="col-lg-3 col-md-6">
         <div class="clickBox no_outline" routerLink="/admin/order/update">
             Create New Order
@@ -21,7 +22,7 @@
     </div>
 </div>
 
-<div class="orderList_box"> 
+  <div class="orderList_box">
     <div class="row">
         <div class="col-md-8 col-sm-6">
             <div class="row">
@@ -33,15 +34,15 @@
                         <div class="orderBox_header">
                             <h4 class="order_number">#{{ item.id }} <span class="order_type">{{ item.order_type.orderType }}</span></h4>
                             <span class="order_time">
-                                
+
                                 <svg class="mr-5 mb-2" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" width="14px" height="14px" viewBox="0 0 128 128" xml:space="preserve"><g><path d="M63.88 0A63.88 63.88 0 1 1 0 63.88 63.88 63.88 0 0 1 63.88 0zm0 11.88a52 52 0 1 1-52 52 52 52 0 0 1 52-52zm0 46.2a5.8 5.8 0 1 1-5.8 5.8 5.8 5.8 0 0 1 5.8-5.8z" fill-rule="evenodd" fill="#aaaaaa" fill-opacity="1"/><path d="M58.25 5h11.3v59h-11.3V5z" fill="#aaaaaa" fill-opacity="1"/><animateTransform attributeName="transform" type="rotate" from="0 64 64" to="360 64 64" dur="2700ms" repeatCount="indefinite" *ngIf="true"></animateTransform></g></svg>
-                                
+
                                 {{ item.timeDif.h | number : '2.0'}} : {{ item.timeDif.i | number : '2.0'}}
                             </span>
                         </div>
                         <div class="orderBox_body">
                             <ng-container *ngIf="item.order_tables && item.order_tables.length > 0">
-                                <p class="mb-0">Tables : <ng-container *ngFor="let t of item.order_tables; let ti=index;let last=last">{{ t.table.tableId }} <ng-container *ngIf="!last">, </ng-container></ng-container> </p> 
+                                <p class="mb-0">Tables : <ng-container *ngFor="let t of item.order_tables; let ti=index;let last=last">{{ t.table.tableId }} <ng-container *ngIf="!last">, </ng-container></ng-container> </p>
                             </ng-container>
                             <small class="text-success" *ngIf="item.readyCount > 0">{{ item.readyCount }} Item Ready<br/></small>
                             <small>Bearer: {{ item.bearer.firstName }} {{ item.bearer.lastName }}</small>
@@ -67,9 +68,9 @@
                         <div class="orderBox_header">
                             <h4 class="order_number">#{{ item.id }}</h4>
                             <span class="order_time">
-                                
+
                                 <svg class="mr-5 mb-2" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" width="14px" height="14px" viewBox="0 0 128 128" xml:space="preserve"><g><path d="M63.88 0A63.88 63.88 0 1 1 0 63.88 63.88 63.88 0 0 1 63.88 0zm0 11.88a52 52 0 1 1-52 52 52 52 0 0 1 52-52zm0 46.2a5.8 5.8 0 1 1-5.8 5.8 5.8 5.8 0 0 1 5.8-5.8z" fill-rule="evenodd" fill="#aaaaaa" fill-opacity="1"/><path d="M58.25 5h11.3v59h-11.3V5z" fill="#aaaaaa" fill-opacity="1"/><animateTransform attributeName="transform" type="rotate" from="0 64 64" to="360 64 64" dur="2700ms" repeatCount="indefinite" *ngIf="false"></animateTransform></g></svg>
-                                
+
                                 <ng-container *ngIf="item.timeDif.h > 0">{{ item.timeDif.h | number : '2.0'}} : </ng-container>{{ item.timeDif.i | number : '2.0'}} : {{ item.timeDif.s | number : '2.0'}}
                             </span>
                         </div>
@@ -85,4 +86,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
