--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -31,10 +31,15 @@
                 <img src="assets/images/icons/USER.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Users</span>
             </a>
         </li>
+        <li routerLinkActive="active" *ngIf=" this._serv.getPermission('category-master', 'read')">
+            <a href="javascript:;" routerLink="/admin/categories" matRipple [matRippleUnbounded]="false">
+                <img src="assets/images/icons/USER.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Category</span>
+            </a>
+        </li>
         <li routerLinkActive="subOpen" class="have_submenu" *ngIf=" this._serv.getPermission('setting-menu', 'read')">
             <a href="javascript:;" routerLink="/admin/settings" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
                 <img src="assets/images/icons/SETTINGS.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Setting </span>
-                <img src="assets/images/icons/ARROWDOWN.svg" alt="" class="icon_img ml-auto right_arrow">
+                <img src="assets/images/icons/ARROWDOWN.svg" alt="" class="icon_img ml-auto right_arrow sub_menu_arrow">
                 <!-- <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon> -->
             </a>
             <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
@@ -48,11 +53,6 @@
                         Branches
                     </a>
                 </li>
-                <li routerLinkActive="active" *ngIf=" this._serv.getPermission('category-master', 'read')">
-                    <a href="javascript:;" routerLink="/admin/settings/categories" matRipple>
-                        Categories
-                    </a>
-                </li>
                 <li routerLinkActive="active" *ngIf=" this._serv.getPermission('table-master', 'read')">
                     <a href="javascript:;" routerLink="/admin/settings/table-manager" matRipple>
                         Table Manager
@@ -63,7 +63,7 @@
         <li routerLinkActive="subOpen" class="have_submenu" *ngIf=" this._serv.getPermission('accounting-menu', 'full')">
             <a href="javascript:;" routerLink="/admin/account-management" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
                 <img src="assets/images/icons/BARGRAPH.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Accounts </span>
-                <img src="assets/images/icons/ARROWDOWN.svg" alt="" class="icon_img ml-auto right_arrow">
+                <img src="assets/images/icons/ARROWDOWN.svg" alt="" class="icon_img ml-auto right_arrow sub_menu_arrow">
                 <!-- <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon> -->
             </a>
             <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
