--- a/src/app/admin/settings/company-setting/list-company/list-company.component.html
+++ b/src/app/admin/settings/company-setting/list-company/list-company.component.html
@@ -21,8 +21,8 @@
                                             <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                                         </button>
                                         <mat-menu #moreOption="matMenu">
-                                            <button mat-menu-item type="button" [routerLink]="['/admin/settings/company/update/'+item.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img"> Edit</button>
-                                            <button mat-menu-item type="button" (click)="deleteCompany(item)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">Delete</button>
+                                            <button mat-menu-item type="button" [routerLink]="['/admin/settings/company/update/'+item.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img mr-3"> Edit</button>
+                                            <button mat-menu-item type="button" (click)="deleteCompany(item)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img mr-3">Delete</button>
                                         </mat-menu>
                                     </td>
                                     <td>
