--- a/src/app/admin/orders/components/order-lists/order-lists.component.scss
+++ b/src/app/admin/orders/components/order-lists/order-lists.component.scss
@@ -1,5 +1,5 @@
 .highlight{
-    // background: #f3e4e0; /* green */
+    // background: #f3e4e0; __<<ngThemingMigrationEscapedComment0>>__
     td{
       &:first-child{
         position: relative;
