--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
+
 @use '~@angular/material' as mat;
 
-
+@import '~@angular/material/theming';
+@include mat.core();
+//@include mat.core();
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
@@ -45,26 +48,24 @@
 @import 'variables.scss';
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
 // Plus imports for other components in your app.
 @import 'theme-palette.scss';
-
 @import 'mix-scss/scss/lib.scss';
 
-@include mat.core();
-$frontExpoSmart-primary: mat.define-palette($md-frontexpo-blue);
-$frontExpoSmart-accent: mat.define-palette($md-frontexpo-orange, A200, A100, A400);
-$frontExpoSmart-warn: mat.define-palette($md-frontexpo-red);
-$frontExpoSmart-theme: mat.define-light-theme((
-  color: (
-    primary: $frontExpoSmart-primary,
-    accent: $frontExpoSmart-accent,
-    warn: $frontExpoSmart-warn,
-    success: $frontExpoSmart-warn,
-  )
-));
-@include mat.all-component-themes($frontExpoSmart-theme);
 
+//$frontExpoSmart-primary: mat.define-palette($md-frontexpo-blue);
+//$frontExpoSmart-accent: mat.define-palette($md-frontexpo-orange, A200, A100, A400);
+//$frontExpoSmart-warn: mat.define-palette($md-frontexpo-red);
+//$frontExpoSmart-theme: mat.define-light-theme((
+//  color: (
+//    primary: $frontExpoSmart-primary,
+//    accent: $frontExpoSmart-accent,
+//    warn: $frontExpoSmart-warn,
+//    success: $frontExpoSmart-warn,
+//  )
+//));
+//@include mat.all-component-themes($frontExpoSmart-theme);
+//
 html, body {
     height: 100%;
     font-size: 10px;
