--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 @use '~@angular/material' as mat;
 
 @import '~@angular/material/theming';
-@include mat.core();
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 //@include mat.core();
 
 @import "../node_modules/bootstrap/scss/functions";
