--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1954,12 +1954,12 @@ label.mat-checkbox-layout {
     }
 }
 
-.mat-form-field{
-    &.mat-form-field-appearance-outline {
-        .mat-form-field-wrapper {
-            .mat-form-field-suffix{
-                top: 0;
-            }
-        }
-    }
-}
+// .mat-form-field{
+//     &.mat-form-field-appearance-outline {
+//         .mat-form-field-wrapper {
+//             .mat-form-field-suffix{
+//                 top: 0;
+//             }
+//         }
+//     }
+// }
