--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1960,7 +1960,7 @@ label.mat-checkbox-layout {
             .mat-form-field-suffix{
                 .mat-icon-button{
                     .icon_img {   
-                        top: 0;
+                        margin-top: -10px;
                     }
                 }
             }
