--- a/src/styles.scss
+++ b/src/styles.scss
@@ -683,6 +683,10 @@ table {
         border-radius: 4px;
         border: 1px solid #b9b9b9;
         cursor: pointer;
+        @media(max-width:1360px){
+            width: 100px;
+            height: 100px;
+        }
     }
 }
 
@@ -855,6 +859,11 @@ label.mat-checkbox-layout {
                     -moz-transition: .3s ease-in-out;
                     -ms-transition: .3s ease-in-out;
                     transition: .3s ease-in-out;
+                    @media(max-width:1360px){
+                        padding: 1.5rem;
+                        font-size: 2rem;
+                        min-width: 170px;
+                    }
                 }
                 &.active{
                     a{
@@ -927,6 +936,10 @@ label.mat-checkbox-layout {
     box-shadow: 0px 3px 10px #CCCEE9 !important;
     h1{
         font-size: 3.4rem;
+        @media(max-width:1360px){
+            font-size: 2.6rem;
+            margin-top: 10px !important;
+        }
     }
 }
 .only_boder{
@@ -1548,6 +1561,9 @@ label.mat-checkbox-layout {
 }
 .left_bar{
     width: 350px;
+    @media(max-width:1360px){
+        width: 260px;
+    }
     // border-right: 1px solid #ddd;
     .left_header{
         padding: 15px;
@@ -1650,9 +1666,15 @@ label.mat-checkbox-layout {
 .product_lists{
     .prod_list_header{
         padding: 10px 0px;
+        flex-wrap: wrap;
         .productHeading{
             margin-bottom: 0px;
             font-size: 20px;
+        }
+        .mat-form-field{
+            @media(max-width:1360px){
+                margin-left: 0px !important;
+            }
         }
     }
     .items_list_ul{
@@ -1828,6 +1850,10 @@ label.mat-checkbox-layout {
     .mat-tab-labels{
         .mat-tab-label{
             min-width: 80px;
+            @media(max-width:1360px){
+                font-size: 12px;
+                padding: 0px 15px;
+            }
             &.mat-tab-label-active{
                 background-color: rgb(234, 234, 243);
                 color: #2e358e;
