--- a/src/app/admin/report-manager/order-report/order-report.component.html
+++ b/src/app/admin/report-manager/order-report/order-report.component.html
@@ -1,14 +1,20 @@
 <div class="search_outerWrapper"  [formGroup]="filterForm">
-    <div class="row gutters-10 justify-content-end">
+    <div class="row gutters-10">
+        <div class="col-12 text-right pb-4">
+            <button mat-raised-button class="mr-10" type="button" (click)="getOrderList($event)" color="primary">Generate</button>
+            <button mat-mini-fab color="primary" type="button" class="ml-auto" (click)="exportToExcel()">
+                <img src="assets/images/icons/DOWNLOAD.svg" alt="" class="icon_img">
+            </button>
+        </div>
         <div class="col-xl-2 col-md-4 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
+            <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Search</mat-label>
                 <input matInput placeholder="Placeholder" formControlName="searchString">
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
         </div>
         <div class="col-xl-2 col-md-4 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
+            <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Date range</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
                     <input matStartDate placeholder="Start date" formControlName="startDate">
@@ -19,7 +25,7 @@
             </mat-form-field>
         </div>
         <div class="col-xl-2 col-md-3 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
+            <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Status</mat-label>
                 <mat-select formControlName="orderStatus" multiple>
                     <mat-option *ngFor="let item of orderStatus" [value]="item">{{ item|titlecase }}</mat-option>
@@ -28,7 +34,7 @@
         </div>
 
         <div class="col-xl-2 col-md-3 col-sm-6 col-12" *ngIf="userData?.roles == 'Super Admin'">
-            <mat-form-field appearance="outline" class="w-100 pb-0 mr-10">
+            <mat-form-field appearance="outline" class="w-100 mr-10">
                 <mat-label>Branch</mat-label>
                 <mat-select matNativeControl formControlName="branch_id"
                     (selectionChange)="getBranchDetail(filterForm.get('branch_id').value)">
@@ -37,7 +43,7 @@
             </mat-form-field>
         </div>
         <div class="col-xl-2 col-md-3 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
+            <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Order Type</mat-label>
                 <mat-select formControlName="typeOfOrder" multiple>
                     <ng-container *ngFor="let item of orderTypeList;">
@@ -47,7 +53,7 @@
             </mat-form-field>
         </div>
         <div class="col-xl-2 col-md-3 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
+            <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Payment Method</mat-label>
                 <mat-select formControlName="paymentMethod" multiple>
                     <ng-container *ngFor="let item of paymentMethodList;">
@@ -56,12 +62,7 @@
                 </mat-select>
             </mat-form-field>
         </div>
-        <div class="col-xl-auto col-md-2 col-sm-6 col-12">
-            <button mat-raised-button class="mr-10" type="button" (click)="getOrderList($event)" color="primary">Generate</button>
-            <button mat-mini-fab color="primary" type="button" class="ml-auto" (click)="exportToExcel()">
-                <img src="assets/images/icons/DOWNLOAD.svg" alt="" class="icon_img">
-            </button>
-        </div>
+        
 
     </div>
 </div>
