--- a/src/styles.scss
+++ b/src/styles.scss
@@ -683,7 +683,7 @@ table {
         border-radius: 4px;
         border: 1px solid #b9b9b9;
         cursor: pointer;
-        @media(max-width:1360px){
+        @media(max-width:1380px){
             width: 100px;
             height: 100px;
         }
@@ -859,7 +859,7 @@ label.mat-checkbox-layout {
                     -moz-transition: .3s ease-in-out;
                     -ms-transition: .3s ease-in-out;
                     transition: .3s ease-in-out;
-                    @media(max-width:1360px){
+                    @media(max-width:1380px){
                         padding: 1.5rem;
                         font-size: 2rem;
                         min-width: 170px;
@@ -936,7 +936,7 @@ label.mat-checkbox-layout {
     box-shadow: 0px 3px 10px #CCCEE9 !important;
     h1{
         font-size: 3.4rem;
-        @media(max-width:1360px){
+        @media(max-width:1380px){
             font-size: 2.6rem;
             margin-top: 10px !important;
         }
@@ -1561,7 +1561,7 @@ label.mat-checkbox-layout {
 }
 .left_bar{
     width: 350px;
-    @media(max-width:1360px){
+    @media(max-width:1380px){
         width: 260px;
     }
     // border-right: 1px solid #ddd;
@@ -1579,6 +1579,10 @@ label.mat-checkbox-layout {
         font-weight: 500;
         background: #f2f2f2;
         margin-bottom: 0px;
+        @media (max-width:1380px) {
+            font-size: 16px;
+            line-height: 1;
+        }
     }
     .category_list{
         max-height: calc(100vh - 340px);
@@ -1611,6 +1615,9 @@ label.mat-checkbox-layout {
                 -moz-transition: .3s ease-in-out;
                 -ms-transition: .3s ease-in-out;
                 transition: .3s ease-in-out;
+                @media(max-width:1380px){
+                    border-width: 5px 0px 5px 10px;
+                }
             }
             .product_img{
                 display: inline-block;
@@ -1637,6 +1644,9 @@ label.mat-checkbox-layout {
             &.active{
                 padding-left: 40px;
                 cursor: initial;
+                @media(max-width:1380px){
+                    padding-left: 30px;
+                }
                 span{
                     color: rgba(44, 54, 145, 1);
                 }
@@ -1644,6 +1654,9 @@ label.mat-checkbox-layout {
                     left: 15px;
                     opacity: 1;
                     z-index: 1;
+                    @media(max-width:1380px){
+                        left: 10px;
+                    }
                 }
             }
         }
@@ -1670,9 +1683,13 @@ label.mat-checkbox-layout {
         .productHeading{
             margin-bottom: 0px;
             font-size: 20px;
+            @media(max-width:1380px){
+                font-size: 16px;
+                margin-right: 15px;
+            }
         }
         .mat-form-field{
-            @media(max-width:1360px){
+            @media(max-width:1380px){
                 margin-left: 0px !important;
             }
         }
@@ -1850,7 +1867,7 @@ label.mat-checkbox-layout {
     .mat-tab-labels{
         .mat-tab-label{
             min-width: 80px;
-            @media(max-width:1360px){
+            @media(max-width:1380px){
                 font-size: 12px;
                 padding: 0px 15px;
             }
