--- a/src/app/admin/account-management/dashboard/dashboard.component.html
+++ b/src/app/admin/account-management/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 </div>
-<div class="account_body_wrapper pl-25 pr-25">
+<div class="account_body_wrapper">
 	<div class="row mb-50">
 		<div class="col-lg-3 col-sm-6 col-12">
 			<mat-card class="dash_card">
