--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -6,7 +6,7 @@
         </div> -->
     </h2>
 </div>
-<div class="account_body_wrapper pl-25 pr-25">
+<div class="account_body_wrapper">
     <div class="body_inner_card">
         <div class="tab_header">
             <div class="tab_btn" routerLink="/admin/order/list" routerLinkActive="active">
