--- a/src/app/admin/account-management/account-reports/account-reports.component.html
+++ b/src/app/admin/account-management/account-reports/account-reports.component.html
@@ -3,7 +3,7 @@
         Reports
     </h2>
 </div>
-<div class="account_body_wrapper pl-25 pr-25">
+<div class="account_body_wrapper">
     <div class="body_inner_card">
         <div class="tab_header">
             <div class="tab_btn" routerLink="/admin/account-management/reports/custom" routerLinkActive="active">
