--- a/src/app/admin/account-management/new-transaction/new-transaction.component.html
+++ b/src/app/admin/account-management/new-transaction/new-transaction.component.html
@@ -22,7 +22,7 @@
         </mat-form-field>
     </div>
 </div>
-<div class="account_body_wrapper pl-25 pr-25">
+<div class="account_body_wrapper">
     <div class="body_inner_card">
         <div class="tab_header">
             <div class="tab_btn" routerLink="/admin/account-management/new-transaction/sales" routerLinkActive="active">
