--- a/src/app/admin/account-management/transaction-history/transaction-history.component.html
+++ b/src/app/admin/account-management/transaction-history/transaction-history.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
 </div>
-<div class="account_body_wrapper pl-25 pr-25">
+<div class="account_body_wrapper">
     <div class="body_inner_card">
         <div class="tab_header">
             <div class="tab_btn" [class.active]="selectedMenu == 'all'" (click)="selectMenu('all')">
