--- a/src/styles.scss
+++ b/src/styles.scss
@@ -274,6 +274,7 @@ h3.page_title {
 
 // inner page css
 .page_header{
+    padding: 10px 15px;
     & .header_title{
         margin-bottom: 0px;
         font-weight: 500;
@@ -827,13 +828,23 @@ label.mat-checkbox-layout {
 .accont_header_wrapping{
     min-height: 180px;
     background-color: #cbcde3;
+    @media(max-width:1380px){
+        min-height: 170px;
+    }
     h2{
         font-size: 2.7rem;
         color: #2E358E;
+        @media(max-width:1380px){
+            font-size: 2.4rem;
+        }
     }
 }
 .account_body_wrapper{
     margin-top: -72px;
+    padding: 0px 25px;
+    @media(max-width:1380px){
+        padding: 0px 15px;
+    }
     .body_inner_card{
         background-color: #fff;
         box-shadow: 0px 3px 10px #CCCEE9;
@@ -1562,7 +1573,7 @@ label.mat-checkbox-layout {
 .left_bar{
     width: 350px;
     @media(max-width:1380px){
-        width: 260px;
+        width: 250px;
     }
     // border-right: 1px solid #ddd;
     .left_header{
@@ -1754,6 +1765,9 @@ label.mat-checkbox-layout {
                             margin-bottom: 5px;
                             font-weight: 500;
                             font-size: 20px;
+                            @media(max-width:1380px){
+                                font-size: 18px;
+                            }
                         }
                     }
                     .buttonBox{
