--- a/src/app/admin/account-management/inventory-manager/inventory-manager.component.html
+++ b/src/app/admin/account-management/inventory-manager/inventory-manager.component.html
@@ -6,14 +6,14 @@
 <div class="account_body_wrapper">
     <div class="body_inner_card">
         <div class="tab_header">
-            <div class="tab_btn" routerLink="/admin/account-management/inventory/dashboard" routerLinkActive="active">
-                <a href="javascript:;">Dashboard</a>
-            </div>
+<!--            <div class="tab_btn" routerLink="/admin/account-management/inventory/dashboard" routerLinkActive="active">-->
+<!--                <a href="javascript:;">Dashboard</a>-->
+<!--            </div>-->
             <div class="tab_btn" routerLink="/admin/account-management/inventory/list" routerLinkActive="active">
-                <a href="javascript:;">List</a>
+                <a href="javascript:;">{{ currentUrl == 'view' ? 'Details' : 'List' }}</a>
             </div>
             <div class="tab_btn" routerLink="/admin/account-management/inventory/update" routerLinkActive="active">
-                <a href="javascript:;">Add New</a>
+                <a href="javascript:;">{{ currentUrl == 'edit' ? 'Update' : 'Add New' }}</a>
             </div>
         </div>
         <div class="tab_body pa-20">
