--- a/src/app/admin/account-management/dashboard/dashboard.component.html
+++ b/src/app/admin/account-management/dashboard/dashboard.component.html
@@ -1,55 +1,55 @@
 <div class="accont_header_wrapping d-flex pa-25 align-items-start">
 	<h2 class="text-uppercase font-weight-500 mb-0">Dashboard</h2>
-	<div class="radio_toggle ml-auto mt-2">
-		<div class="radioBox">
-			<input type="radio" id="month" name="reportas" value="month" checked>
-			<label for="month" class="valueOne">
-				<p>Monthly</p>
-			</label>
-		</div>
-		<div class="radioBox">
-			<input type="radio" id="year" name="reportas" value="year">
-			<label for="year" class="valueTwo">
-				<p>Yearly</p>
-			</label>
-		</div>
-	</div>
+<!--	<div class="radio_toggle ml-auto mt-2">-->
+<!--		<div class="radioBox">-->
+<!--			<input type="radio" id="month" name="reportas" value="month" checked>-->
+<!--			<label for="month" class="valueOne">-->
+<!--				<p>Monthly</p>-->
+<!--			</label>-->
+<!--		</div>-->
+<!--		<div class="radioBox">-->
+<!--			<input type="radio" id="year" name="reportas" value="year">-->
+<!--			<label for="year" class="valueTwo">-->
+<!--				<p>Yearly</p>-->
+<!--			</label>-->
+<!--		</div>-->
+<!--	</div>-->
 </div>
 <div class="account_body_wrapper">
-	<div class="row mb-50">
-		<div class="col-lg-3 col-sm-6 col-12">
-			<mat-card class="dash_card">
-				<div class="py-10">
-					<p class="font-1_8 text-accent font-weight-500">Ballance C/D</p>
-					<h1 class="mb-0 mt-20 text-primary font-weight-600">1,20,000</h1>
-				</div>
-			</mat-card>
-		</div>
-		<div class="col-lg-3 col-sm-6 col-12">
-			<mat-card class="dash_card">
-				<div class="py-10">
-					<p class="font-1_8 text-accent font-weight-500">Income</p>
-					<h1 class="mb-0 mt-20 text-primary font-weight-600">1,20,000</h1>
-				</div>
-			</mat-card>
-		</div>
-		<div class="col-lg-3 col-sm-6 col-12">
-			<mat-card class="dash_card">
-				<div class="py-10">
-					<p class="font-1_8 text-accent font-weight-500">Expense</p>
-					<h1 class="mb-0 mt-20 text-primary font-weight-600">1,20,000</h1>
-				</div>
-			</mat-card>
-		</div>
-		<div class="col-lg-3 col-sm-6 col-12">
-			<mat-card class="dash_card">
-				<div class="py-10">
-					<p class="font-1_8 text-accent font-weight-500">End Balance</p>
-					<h1 class="mb-0 mt-20 text-primary font-weight-600">1,20,000</h1>
-				</div>
-			</mat-card>
-		</div>
-	</div>
+<!--	<div class="row mb-50">-->
+<!--		<div class="col-lg-3 col-sm-6 col-12">-->
+<!--			<mat-card class="dash_card">-->
+<!--				<div class="py-10">-->
+<!--					<p class="font-1_8 text-accent font-weight-500">Ballance C/D</p>-->
+<!--					<h1 class="mb-0 mt-20 text-primary font-weight-600">1,20,000</h1>-->
+<!--				</div>-->
+<!--			</mat-card>-->
+<!--		</div>-->
+<!--		<div class="col-lg-3 col-sm-6 col-12">-->
+<!--			<mat-card class="dash_card">-->
+<!--				<div class="py-10">-->
+<!--					<p class="font-1_8 text-accent font-weight-500">Income</p>-->
+<!--					<h1 class="mb-0 mt-20 text-primary font-weight-600">1,20,000</h1>-->
+<!--				</div>-->
+<!--			</mat-card>-->
+<!--		</div>-->
+<!--		<div class="col-lg-3 col-sm-6 col-12">-->
+<!--			<mat-card class="dash_card">-->
+<!--				<div class="py-10">-->
+<!--					<p class="font-1_8 text-accent font-weight-500">Expense</p>-->
+<!--					<h1 class="mb-0 mt-20 text-primary font-weight-600">1,20,000</h1>-->
+<!--				</div>-->
+<!--			</mat-card>-->
+<!--		</div>-->
+<!--		<div class="col-lg-3 col-sm-6 col-12">-->
+<!--			<mat-card class="dash_card">-->
+<!--				<div class="py-10">-->
+<!--					<p class="font-1_8 text-accent font-weight-500">End Balance</p>-->
+<!--					<h1 class="mb-0 mt-20 text-primary font-weight-600">1,20,000</h1>-->
+<!--				</div>-->
+<!--			</mat-card>-->
+<!--		</div>-->
+<!--	</div>-->
 	<div class="row">
 		<div class="col ew-mn-100">
 			<mat-card class="dash_card p-0">
