--- a/src/app/admin/account-management/new-transaction/new-transaction.component.html
+++ b/src/app/admin/account-management/new-transaction/new-transaction.component.html
@@ -1,22 +1,22 @@
 <div class="accont_header_wrapping pa-25 d-flex justify-content-between">
     <h2 class="text-uppercase font-weight-500 mb-0">
-        {{_transact.form.get('id').value ? 'Update Transaction' :'New Transaction'}}
+        {{transact.form.get('id').value ? 'Update Transaction' :'New Transaction'}}
     </h2>
     <div class="d-flex">
-        <mat-form-field appearance="fill" class="mr-3"  [hidden]="userData?.value != 'Super Admin'">
+        <mat-form-field appearance="fill" class="mr-3"  [hidden]="userData?.roles != 'Super Admin'">
             <mat-label>Company</mat-label>
-            <mat-select required [formControl]="_transact.form.get('company_id')"  [required]="userData?.value == 'Super Admin'"
-                (selectionChange)="_transact.resetData()">
+            <mat-select required [formControl]="transact.form.get('company_id')" [required]="userData?.value == 'Super Admin'">
                 <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
             </mat-select>
         </mat-form-field>
-        <mat-form-field appearance="fill" [hidden]="userData?.value != 'Super Admin' && userData?.value != 'Company Admin' && userData?.value != 'Company Accountant'">
+<!--                        (selectionChange)="transact.resetData()"-->
+        <mat-form-field appearance="fill" [hidden]="userData?.roles != 'Super Admin' && userData?.roles != 'Company Admin'">
             <mat-label>Branch</mat-label>
-            <mat-select [formControl]="_transact.form.get('branch_id')">
-                <mat-select-filter [placeholder]="'Filter'" [displayMember]="'branchTitle'" [array]="branchList"
-                    (filteredReturn)="filteredBranchList =$event"></mat-select-filter>
+            <mat-select [formControl]="transact.form.get('branch_id')" (selectionChange)="transact.resetData()">
+                <mat-select-filter [placeholder]="'Filter'" [displayMember]="'branchTitle'" [array]="transact.branchList"
+                    (filteredReturn)="transact.filteredBranchList =$event"></mat-select-filter>
                 <mat-option></mat-option>
-                <mat-option *ngFor="let item of filteredBranchList" [value]="item.id">{{ item.branchTitle }}
+                <mat-option *ngFor="let item of transact.filteredBranchList" [value]="item.id">{{ item.branchTitle }}
                 </mat-option>
             </mat-select>
         </mat-form-field>
