--- a/src/app/admin/account-management/new-transaction/new-payment/new-payment.component.html
+++ b/src/app/admin/account-management/new-transaction/new-payment/new-payment.component.html
@@ -1,13 +1,13 @@
-<div [formGroup]="_transact.form">
+<div [formGroup]="transact.form">
     <div class="deatail_wraper mb-15">
         <div class="row">
             <div class="col-md-auto col-sm-6 col-12 order-1">
                 <mat-form-field appearance="fill" class="ew-300">
                     <mat-label>From Account</mat-label>
                     <mat-select required formControlName="accountId">
-                      <mat-select-filter [placeholder]="'Filter'" [displayMember]="'ledgerName'" [array]="_transact.accountList" (filteredReturn)="_transact.filteredAccountList =$event"></mat-select-filter>
-                      <ng-container *ngFor="let item of _transact.filteredAccountList;">
-                        <mat-option *ngIf="_transact.topAccountExclude.indexOf(item.accountType) < 0" [value]="item.id">{{ item.ledgerName }}</mat-option>
+                      <mat-select-filter [placeholder]="'Filter'" [displayMember]="'ledgerName'" [array]="transact.accountList" (filteredReturn)="transact.filteredAccountList =$event"></mat-select-filter>
+                      <ng-container *ngFor="let item of transact.filteredAccountList;">
+                        <mat-option *ngIf="transact.topAccountExclude.indexOf(item.accountType) < 0" [value]="item.id">{{ item.ledgerName }}</mat-option>
                       </ng-container>
                     </mat-select>
                   </mat-form-field>
@@ -24,10 +24,10 @@
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
             </div>
-            <div class="col-md-auto ml-auto col-sm-6 col-12 order-0 order-sm-3" *ngIf="_transact.form.get('transactionRefNumber').value">
+            <div class="col-md-auto ml-auto col-sm-6 col-12 order-0 order-sm-3" *ngIf="transact.form.get('transactionRefNumber').value">
                 <div class="d-inline-flex align-items-center text-primary font-1_6">
-                    <span>Ref. No :</span> 
-                    {{ _transact.form.get('transactionRefNumber').value }} 
+                    <span>Ref. No :</span>
+                    {{ transact.form.get('transactionRefNumber').value }}
                     <!-- <div class="custom_input ew-60 d-md-inline-block">
                         <input type="text" class="w-100">
                         <span class="underline"></span>
@@ -39,12 +39,12 @@
             </div>
         </div>
         <!-- <p class="balance_text text-accent font-1_6 font-weight-400">Current Balance: 0.00</p> -->
-    </div> 
+    </div>
 
     <ng-container>
         <div class="d-flex align-items-center justify-content-between mt-20">
             <h3 class="title_h3 font-weight-500 mb-5 text-primary">Summary</h3>
-            <button type="button" (click)="_transact.addAnotherAccount()" mat-button>
+            <button type="button" (click)="transact.addAnotherAccount()" mat-button>
                 <!-- <img src="assets/images/icons/ADD.svg" alt="" class="icon_img"> -->
                 <img src="assets/images/icons/ADD.svg" alt="" class="icon_img">
                  Add
@@ -55,20 +55,18 @@
                 <div class="table-responsive mt-10">
                     <table class="table account_table">
                         <tbody formArrayName="accounts">
-                            <ng-container *ngFor="let account of _transact.accounts['controls'];let i=index;">
+                            <ng-container *ngFor="let account of transact.accounts['controls'];let i=index;">
                                 <ng-container *ngIf="!account.get('deletedFlag').value">
-                                    <tr *ngIf="_transact.editAccountIndex != i else editAccountMode">
+                                    <tr *ngIf="transact.editAccountIndex != i else editAccountMode">
                                         <td class="ew-50"></td>
                                         <td>
-                                            <a href="javascript:;" class="text-reset" (click)="_transact.onEditAccountClick(i)">{{account.get('account').value.ledgerName}}</a>
+                                            <a href="javascript:;" class="text-reset" (click)="transact.onEditAccountClick(i)">{{account.get('account').value.ledgerName}}</a>
                                         </td>
                                         <td class="ew-150"></td>
                                         <td class="ew-150">
-                                            {{ account.get('amountValue').value }} 
+                                            {{ account.get('amountValue').value }}
                                             <span class="d-inline-block ml-5">
-                                                <ng-container *ngIf="account.get('amountProcessType').value == 'percent' else rupeesTemplate">
-                                                    %
-                                                </ng-container>
+                                                &#8377;
                                             </span>
                                         </td>
                                         <td class="ew-150">
@@ -78,7 +76,7 @@
                                     <ng-template #editAccountMode>
                                         <tr [formGroupName]="i">
                                             <td class="ew-50">
-                                                <button mat-icon-button class="small_icon_btn" color="warn" type="button" (click)="_transact.onDeleteAccount(i)">
+                                                <button mat-icon-button class="small_icon_btn" color="warn" type="button" (click)="transact.onDeleteAccount(i)">
                                                     <!-- <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"> -->
                                                     <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                                                 </button>
@@ -87,32 +85,21 @@
                                                 <mat-form-field class="field-pb-0 table_select ew-mn-300">
                                                     <mat-select formControlName="account">
                                                         <mat-option></mat-option>
-                                                        <ng-container *ngFor="let item of _transact.filteredExpenseAccountList;">
-                                                            <mat-option *ngIf="_transact.taxAndExpenseExclude.indexOf(item.accountType) < 0" [value]="item">{{ item.ledgerName }}</mat-option>
+                                                        <ng-container *ngFor="let item of transact.filteredExpenseAccountList;">
+                                                            <mat-option *ngIf="transact.taxAndExpenseExclude.indexOf(item.accountType) < 0" [value]="item">{{ item.ledgerName }}</mat-option>
                                                         </ng-container>
                                                     </mat-select>
                                                   </mat-form-field>
                                             </td>
                                             <td class="ew-150"></td>
                                             <td class="ew-150">
-                                                
+
                                                 <mat-form-field class="field-pb-0 table_select ew-150">
                                                     <input matInput formControlName="amountValue">
-                                                    <span matSuffix class="suffix_text cursor-pointer" [matMenuTriggerFor]="dropMenu">
-                                                        <ng-container *ngIf="account.get('amountProcessType').value == 'percent' else rupeesTemplate">
-                                                            %
-                                                        </ng-container>
+                                                    <span matSuffix class="suffix_text cursor-pointer">
+                                                        &#8377;
                                                     </span>
                                                 </mat-form-field>
-                                                <!-- <div class="custom_input suffix ew-100">
-                                                    <span class="suffix_text cursor-pointer" [matMenuTriggerFor]="dropMenu">%</span>
-                                                    <input type="text" class="w-100" value="230">
-                                                    <span class="underline"></span>
-                                                </div> -->
-                                                <mat-menu #dropMenu="matMenu" class="dropdown_small">
-                                                    <button mat-menu-item type="button" (click)="account.get('amountProcessType').setValue('percent')">Percent</button>
-                                                    <button mat-menu-item type="button" (click)="account.get('amountProcessType').setValue('amount')">Rupee</button>
-                                                </mat-menu>
                                             </td>
                                             <td class="ew-150">
                                                 <mat-form-field class="field-pb-0 table_select ew-150">
@@ -121,12 +108,9 @@
                                             </td>
                                         </tr>
                                     </ng-template>
-                                    <ng-template #rupeesTemplate>
-                                        &#8377;
-                                    </ng-template>
                                 </ng-container>
                             </ng-container>
-                            <tr *ngIf="_transact.accounts['controls'].length == 0">
+                            <tr *ngIf="transact.accounts['controls'].length == 0">
                                 <td colspan="5">
                                     No entry added
                                 </td>
@@ -157,7 +141,7 @@
                             </tr> -->
                             <tr class="total_row">
                                 <td colspan="4" class="text-right">Grand Total</td>
-                                <td class="ew-180">{{ _transact.totalHandler.transactionGrandTotal }}</td>
+                                <td class="ew-180">{{ transact.totalHandler.transactionGrandTotal }}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -173,7 +157,7 @@
         </mat-form-field>
     </div>
     <div class="footer_acc_section d-flex justify-content-end">
-        <button type="button" mat-raised-button color="primary" [disabled]="_transact.form.invalid" (click)="_transact.saveFinaldata()">Save</button>
+        <button type="button" mat-raised-button color="primary" [disabled]="transact.form.invalid" (click)="transact.saveFinaldata()">Save</button>
     </div>
 
 </div>
